--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p class="text-card">Khorgiin togoo</p>
                     </div>
                 </div>
-            </div>`
+            </div>
             <div class="third-page">
                 <h1>Destination of Our Agency</h1>
                 <br>
