--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </header>
                 <section>
                     <h1 class="text1">PURE MAGIC</h1>
-                    <h1 class="text2">AWAITS</h1>
+                    <h1 class="text2">AWAITS!</h1>
                     <h1 class="text3">2024</h1>
                 </section>
             </div>
@@ -50,6 +50,33 @@
                 <h1>Destination of Our Agency</h1>
                 <br>
                 <p>Pack your bags and get ready</p>
+                <div class="cont1">
+                    <div class="div1">
+                        <h2>Sukhbaatar square</h2>
+                        <img src="Img/Icons/IconContainer2.png">
+                        <span>  Ulaanbator</span>
+                    </div>
+                    <div class="div2">
+                        <h2>Amarbaysgalant monastery</h2>
+                        <img src="Img/Icons/IconContainer2.png">
+                        <span>  Amarbaysgalant monastery</span>
+                    </div>
+                    <div class="div3">
+                        <h2>Khorgiin togoo</h2>
+                        <img src="Img/Icons/IconContainer2.png">
+                        <span>  Arkhangai</span>
+                    </div>
+                    <div class="div4">
+                        <h2>Terkhiin tsagaan lake</h2>
+                        <img src="Img/Icons/IconContainer2.png">
+                        <span>  Arkhangai</span>
+                    </div>
+                    <div class="div5">
+                        <h2>Khuvsgul lake</h2>
+                        <img src="Img/Icons/IconContainer2.png">
+                        <span>  Khuvsgul</span>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
