--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -33,15 +36,19 @@
             <div class="second-page">
                 <div class="frame-container">
                     <div class="frames first">
+                        <div class="black"></div>
                         <p class="text-card">Terkhiin tsagaan lake</p>
                     </div>
                     <div class="frames second">
-                        <p class="text-card">Amarbayasgalant Monastery</p>
+                        <div class="black"></div>
+                        <p class="text-card">Amar Bayasgalant Monastery</p>
                     </div>
                     <div class="frames third">
+                        <div class="black"></div>
                         <p class="text-card">Khuvsgul lake</p>
                     </div>
                     <div class="frames fourth">
+                        <div class="black"></div>
                         <p class="text-card">Khorgiin togoo</p>
                     </div>
                 </div>
@@ -51,30 +58,82 @@
                 <br>
                 <p>Pack your bags and get ready</p>
                 <div class="cont1">
-                    <div class="div1">
+                    <div class="div1 divs">
                         <h2>Sukhbaatar square</h2>
-                        <img src="Img/Icons/IconContainer2.png">
-                        <span>  Ulaanbator</span>
+                        <br>
+                        <img src="Img/Icons/MapPin1.png">
+                        <span class="cities">  Ulaanbator</span>
+                        <div class="days"><span>Day 1</span></div>
                     </div>
-                    <div class="div2">
+                    <div class="div2 divs">
                         <h2>Amarbaysgalant monastery</h2>
-                        <img src="Img/Icons/IconContainer2.png">
-                        <span>  Amarbaysgalant monastery</span>
+                        <br>
+                        <img src="Img/Icons/MapPin1.png">
+                        <span class="cities">  Amarbaysgalant monastery</span>
+                        <div class="days"><span>Day 2</span></div>
                     </div>
-                    <div class="div3">
+                    <div class="div3 divs">
                         <h2>Khorgiin togoo</h2>
-                        <img src="Img/Icons/IconContainer2.png">
-                        <span>  Arkhangai</span>
+                        <br>
+                        <img src="Img/Icons/MapPin1.png">
+                        <span class="cities">  Arkhangai</span>
+                        <div class="days"><span>Day 3</span></div>
                     </div>
-                    <div class="div4">
+                    <div class="div4 divs">
                         <h2>Terkhiin tsagaan lake</h2>
-                        <img src="Img/Icons/IconContainer2.png">
-                        <span>  Arkhangai</span>
+                        <br>
+                        <img src="Img/Icons/MapPin1.png">
+                        <span class="cities">  Arkhangai</span>
+                        <div class="days"><span>Day 4</span></div>
                     </div>
-                    <div class="div5">
+                    <div class="div5 divs">
                         <h2>Khuvsgul lake</h2>
-                        <img src="Img/Icons/IconContainer2.png">
-                        <span>  Khuvsgul</span>
+                        <br>
+                        <img src="Img/Icons/MapPin1.png">
+                        <span class="cities">  Khuvsgul</span>
+                        <div class="days"><span>Day 5</span></div>
+                    </div>
+                </div>
+            </div>
+            <div class="fourth-page">
+                <div class="head">
+                    <h1>Pricing of Our Agency</h1>
+                    <span>Choose A Package That's Right For You</span>
+                </div>
+                <div class="cont2">
+                    <div class="price">
+                        <div class="price-header">
+                            <img src="Img/Icons/IconButton1.png">
+                            <span class="cont2-span">Budget Package</span>
+                        </div>
+                        <br>
+                        <div class="section">
+                            <h1>500$</h1>
+                            <h3>Essentials Covered</h3>
+                        </div>
+                    </div>
+                    <div class="price">
+                        <div class="price-header">
+                            <img src="Img/Icons/IconButton1.png">
+                            <span class="cont2-span">Standard Package</span>
+                        </div>
+                        <br>
+                        <div class="section">
+                            <h1>800$</h1>
+                            <h3>Balanced Adventure</h3>
+                            <span class="popular">Popular</span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        <div class="price-header">
+                            <img src="Img/Icons/IconButton1.png">
+                            <span class="cont2-span">Luxury Package</span>
+                        </div>
+                        <br>
+                        <div class="section">
+                            <h1>1200$</h1>
+                            <h3>Ultimate Comfort</h3>
+                        </div>
                     </div>
                 </div>
             </div>
