--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                 <br>
                 <p>Pack your bags and get ready</p>
                 <div class="cont1">
+                    <img src="Img/Icons/MapPin1.png" class="pins" id="first">
+                    <img src="Img/Icons/MapPin1.png" class="pins" id="second">
+                    <img src="Img/Icons/MapPin1.png" class="pins" id="third">
+                    <img src="Img/Icons/MapPin1.png" class="pins" id="fourth">
+                    <img src="Img/Icons/MapPin1.png" class="pins" id="fifth">
                     <div class="div1 divs">
                         <h2>Sukhbaatar square</h2>
                         <br>
@@ -111,6 +116,18 @@
                             <h1>500$</h1>
                             <h3>Essentials Covered</h3>
                         </div>
+                        <div class="section1">
+                            <p>Includes:</p>
+                            <br>
+                            <ul>
+                                <li>Group transportation (shared van/bus)</li>
+    
+                                <li>Standard accommodation (yurt or guesthouse)</li>
+                                <li>Guided lake tour</li>
+                                <li>1 meal per day (breakfast)</li>
+                            </ul>
+                        </div>
+                        <div class="button down"><p>Select Package</p></div>
                     </div>
                     <div class="price">
                         <div class="price-header">
@@ -123,6 +140,17 @@
                             <h3>Balanced Adventure</h3>
                             <span class="popular">Popular</span>
                         </div>
+                        <div class="section1">
+                            <p>Includes:</p>
+                            <br>
+                            <ul>
+                                <li>Comfortable transportation (mini-bus)</li>
+                                <li>Mid-range accommodation (private yurt or lodge)</li>
+                                <li>Guided lake tour + nearby hiking</li>
+                                <li>2 meals per day (breakfast and dinner)</li>
+                            </ul>
+                        </div>
+                        <div class="button"><p>Select Package</p></div>
                     </div>
                     <div class="price">
                         <div class="price-header">
@@ -134,8 +162,30 @@
                             <h1>1200$</h1>
                             <h3>Ultimate Comfort</h3>
                         </div>
+                        <div class="section1">
+                            <p>Includes:</p>
+                            <br>
+                            <ul>
+                                <li>Private transportation (SUV)</li>
+                                <li>Luxury accommodation (lakefront lodge)</li>
+                                <li>Guided tours (lake + reindeer herder experience)</li>
+                                <li>All meals included (local cuisine)</li>
+                            </ul>
+                        </div>
+                        <div class="button"><p>Select Package</p></div>
                     </div>
                 </div>
+                <footer>
+                    <div class="contact F">
+                        <img src="Img/Icons/FacebookIcon.png">
+                        <span>Facebook</span>
+                    </div>
+                    <div class="contact I">
+                        <img src="Img/Icons/InstagramIcon.png">
+                        <span>Instagram</span>
+                    </div>
+                    <img src="Img/Icons/logo1.png" class="logo logoFinale">
+                </footer>
             </div>
         </div>
     </body>
