--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                     <img src="Img/Icons/MapPin1.png" class="pins" id="third">
                     <img src="Img/Icons/MapPin1.png" class="pins" id="fourth">
                     <img src="Img/Icons/MapPin1.png" class="pins" id="fifth">
+                    <img src="Img/Frame178.png" class="pins1" id="first">
+                    <img src="Img/Frame 177.png" class="pins1" id="second">
+                    <img src="Img/11111.png" class="pins1" id="third">
+                    <img src="Img/Frame176.png" class="pins1" id="fourth">
+                    <img src="Img/Frame 179.png" class="pins1" id="second">
                     <div class="div1 divs">
                         <h2>Sukhbaatar square</h2>
                         <br>
