--- a/index.html
+++ b/index.html
@@ -58,16 +58,6 @@
                 <br>
                 <p>Pack your bags and get ready</p>
                 <div class="cont1">
-                    <img src="Img/Icons/MapPin1.png" class="pins" id="first">
-                    <img src="Img/Icons/MapPin1.png" class="pins" id="second">
-                    <img src="Img/Icons/MapPin1.png" class="pins" id="third">
-                    <img src="Img/Icons/MapPin1.png" class="pins" id="fourth">
-                    <img src="Img/Icons/MapPin1.png" class="pins" id="fifth">
-                    <img src="Img/Frame178.png" class="pins1" id="first">
-                    <img src="Img/Frame 177.png" class="pins1" id="second">
-                    <img src="Img/11111.png" class="pins1" id="third">
-                    <img src="Img/Frame176.png" class="pins1" id="fourth">
-                    <img src="Img/Frame 179.png" class="pins1" id="second">
                     <div class="div1 divs">
                         <h2>Sukhbaatar square</h2>
                         <br>
@@ -103,6 +93,16 @@
                         <span class="cities">  Khuvsgul</span>
                         <div class="days"><span>Day 5</span></div>
                     </div>
+                    <img src="Img/Icons/MapPin1.png" class="pins loc1 first-pin">
+                    <img src="Img/Icons/MapPin1.png" class="pins loc2 second-pin">
+                    <img src="Img/Icons/MapPin1.png" class="pins loc3 third-pin">
+                    <img src="Img/Icons/MapPin1.png" class="pins loc4 fourth-pin">
+                    <img src="Img/Icons/MapPin1.png" class="pins loc5 fifth-pin">
+                    <img src="Img/Frame178.png" class="pins1 loc1 first-img">
+                    <img src="Img/Frame 177.png" class="pins1 loc2 second-img">
+                    <img src="Img/11111.png" class="pins1 loc3 third-img">
+                    <img src="Img/Frame176.png" class="pins1 loc4 fourth-img">
+                    <img src="Img/Frame 179.png" class="pins1 loc2 fifth-img">
                 </div>
             </div>
             <div class="fourth-page">
@@ -182,11 +182,11 @@
                 <footer>
                     <div class="contact F">
                         <img src="Img/Icons/FacebookIcon.png">
-                        <span>Facebook</span>
+                        <a  href="https://www.facebook.com/narangerel.anar/" target="_blank">Facebook</a>
                     </div>
                     <div class="contact I">
-                        <img src="Img/Icons/InstagramIcon.png">
-                        <span>Instagram</span>
+                        <img src="Img/Icons/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png">
+                        <a href="https://discord.gg/rDQsc8uX" target="_blank">Discord</a>
                     </div>
                     <img src="Img/Icons/logo1.png" class="logo logoFinale">
                 </footer>
